[package]
name = "puissance"
version = "0.1.0"
edition = "2021"

[lib]
name = "puissance"
path = "src/lib.rs"

[[bin]]
name = "my_app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
crossterm = "0.27.0"
log = "0.4"
log4rs = "1.2.0"
flexi_logger="0.25.5"
derive_builder="0.12.0"
itertools = "0.11.0"
rand = "0.8.5"